Обновление проекта "Тонущий мир": внесены изменения в метаданные и описания существ, добавлены новые детали о культуре и религии, улучшена структура документации, удалены устаревшие файлы.

--- a/Монстры/Гигантская_пиявка.md
+++ b/Монстры/Гигантская_пиявка.md
@@ -20,7 +20,7 @@ tags: [monster, creature, другое]
 
 ## Описание
 Пиявка размером до 30 см
-
+![[Гигантская_пиявка.gif]]
 ## Физические характеристики
 - **Размер:** Маленький
 - **Внешний вид:** 
