--- a/Монстры/Крыса-водоход.md
+++ b/Монстры/Крыса-водоход.md
@@ -1,14 +1,18 @@
 ---
-created: "2025-08-13"
-name: "Крыса-водоход"
-aliases: ["ГКрыса-водоход"]
-type: "Монстр"
-size: "Средний"
-intelligence: "Высокий"
-alignment: "Хаотичный"
-habitat: "Затопленные леса"
-tags: [monster, creature, другое]
-image: "Мои Проекты/Тонущий_мир/Теговые_картинки/Монстр.jpg"
+created: 2025-08-13
+name: Крыса-водоход
+aliases:
+  - ГКрыса-водоход
+type: Животное
+size: Средний
+intelligence: Высокий
+alignment: Хаотичный
+habitat: Затопленные леса
+tags:
+  - monster
+  - creature
+  - другое
+image: Мои Проекты/Тонущий_мир/Теговые_картинки/Монстр.jpg
 ---
 
 
