--- a/Монстры/Линдвурм.md
+++ b/Монстры/Линдвурм.md
@@ -31,8 +31,9 @@ image: Мои Проекты/Тонущий_мир/Теговые_картинк
 
 *«Смерть приходит бесшумно, как скольжение Линдвурма по мху» — пословица лесных охотников.*
 ## Описание
-Змееподобное существо с гибким, покрытым  чешуями  телом,  имеющий  передние конечности. Его движения плавны и скрытны, а ядовитое дыхание и способность катиться как колесо делают его непредсказуемым противником.
+Змееподобное существо с гибким, покрытым  чешуями  телом,  имеющее  передние конечности. Его движения плавны и скрытны, а ядовитое дыхание и способность катиться как колесо делают его непредсказуемым противником.
 
+![[Линдвурм.webp]]
 ## Физические характеристики
 - **Размер:** Средний (3–4 м в длину, включая хвост).
 - **Внешний вид:** Тело цилиндрическое, покрытое переливающимися зелёно-бурыми чешуями с чёрными полосами. Голова напоминает змеиную, с вертикальными зрачками и ядовитыми железами у пасти.
