--- a/Монстры/Монстры.md
+++ b/Монстры/Монстры.md
@@ -3,29 +3,34 @@
 ## Описание
 
 ## Содержимое
-
-```folder-overview
-folderPath: "Мои Проекты/Тонущий_мир/Монстры"
-title: "Монстры"
-showTitle: false
-depth: 1
-includeTypes:
-  - folder
-  - markdown
-style: list
-disableFileTag: false
-sortBy: name
-sortByAsc: true
-showEmptyFolders: false
-onlyIncludeSubfolders: false
-storeFolderCondition: true
-showFolderNotes: true
-disableCollapseIcon: true
-alwaysCollapse: false
-autoSync: true
-allowDragAndDrop: true
-hideLinkList: true
-hideFolderOverview: false
-useActualLinks: false
-fmtpIntegration: false
+```dataview
+TABLE without id
+  file.link AS "Монстр",
+  type AS "Тип",
+  size AS "Размер",
+  intelligence AS "Интеллект",
+  alignment AS "Мировоззрение",
+  choice(default(isPoisonous, false), "☠️", "") AS "Ядовит",
+  choice(default(hasMagic, false), "✨", "") AS "Магия"
+FROM "Мои Проекты/Тонущий_мир/Монстры"
+WHERE contains(file.tags, "монстр") OR contains(file.tags, "monster")
+AND contains(file.path, "/Монстры/")
+SORT file.name ASC
 ```
+
+```dataview
+TABLE WITHOUT ID
+  r.file.link AS "Монстр",
+  key AS "Тип",
+  r.size AS "Размер",
+  r.intelligence AS "Интеллект",
+  r.alignment AS "Мировоззрение",
+  choice(default(r.isPoisonous, false), "☠️", "") AS "Ядовит",
+  choice(default(r.hasMagic, false), "✨", "") AS "Магия"
+FROM "Мои Проекты/Тонущий_мир/Монстры"
+WHERE (contains(file.tags, "монстр") OR contains(file.tags, "monster"))
+GROUP BY type
+FLATTEN rows AS r
+SORT key ASC, r.file.name ASC
+```
+
