--- a/Организации/храм_Тота.md
+++ b/Организации/храм_Тота.md
@@ -5,15 +5,80 @@ aliases: ["храм Тота"]
 type: "Орден"
 tags: org
 ---
-# храм Тота
+Благодарю за уточнение! Это значительно углубляет и обогащает концепцию. Вношу коррективы с учетом новой информации.
 
+---
+
+### **Орден Храма Вейдера-Тота в Рюэне**
+
+**Девиз:** *"Познание — единственный путь сквозь пучину невежества. Помни о мертвых, но служи живым."*
+
+#### **Общая концепция**
+
+Храм Вейдера-Тота в Рюэне — это не место слепого поклонения, а динамичный центр синтеза: магии и технологии, жизни и смерти, древних традиций и смелых экспериментов. Это цитадель божества, которое само является симбиозом — слиянием местного бога магии и трансформации (Вейдер) и пришлого бога знания и порядка (Тот). Их последователи, **бахари**, являются не жрецами в классическом понимании, а **учеными-просветителями**. Их вера выражается в активном познании вселенной, а молитвой служит кропотливый исследовательский труд. Они стоят на страже знаний, понимая, что только они могут дать надежду выживающему человечеству.
+
+#### **Детальное описание**
+
+**1. Архитектура и атмосфера:**
+Комплекс отражает двойственную природу божества. Одна его часть — древние, почти замшелые каменные залы Вейдера с ритуальными кельями для медитаций и трансформаций. Другая — строгие, геометрически точные постройки из светлого камня и стекла, несущие печать Тота. Их соединяют переходы-галереи, заполненные рабочими столами, чертежами и звучащие непрерывным диспутом. Воздух пахнет озоном от магических опытов, старыми фолиантами, сушеными травами для алхимических изысканий и легким, не вызывающим тревоги, ароматом бальзамирования.
+
+**2. Иерархия и структура:**
+Членов ордена называют **Бахари** (просветленные/учителя).
+*   **Верховный Архивариус (Аль-Хафиз):** Глава храма, хранитель печати и верховный арбитр в научных и этических спорах.
+*   **Устазы (Наставники):** Старшие бахари, руководящие конкретными направлениями: Магические исследования, Естественные науки, Медицина, Историография, Педагогика.
+*   **Хатибы (Писцы-Теоретики):** Исследователи, работающие с теорией, магией и текстами.
+*   **Мутаалимы (Учащиеся):** Послушники, проходящие обучение и assisting старшим.
+*   **Лекари-Табибы:** Врачи, работающие в госпитале.
+
+**3. Деятельность и особенности:**
+
+*   **Великая Библиотека Рюэна:** Сердце комплекса. Здесь хранятся не только книги, но и образцы флоры/фауны ушедших под воду земель, магические артефакты, карты течений и атмосферных аномалий. Особый отдел — **«Зал Безмолвного Знания»**, где изучаются труды по некромантии. Это не одобрение, а изучение врага и границ дозволенного. Доступ сюда крайне ограничен и требует особого разрешения.
+
+*   **Просветительская школа «Дом Ясного Света»:** Школа для всех сословий, где образование построено на принципах Вейдера-Тота: развитие критического мышления, любознательности и уважения к законам мироздания (как физическим, так и магическим). Учат не только читать и писать, но и основам логики, алхимии, природоведения и безопасным методам обращения с артефактами.
+
+*   **Госпиталь «Последний Причал» (совместно с храмом Ардиса):** Уникальный симбиоз. Бахари Вейдера-Тота обеспечивают **диагностику**: магическую (анализ аур, обнаружение порчи) и технологическую (микроскоп, химические анализы). Жрецы Ардиса, как эксперты по самому переходу между жизнью и смертью, берут на себя **лечение**: сложнейшие операции, управление болью, паллиативную помощь и уход за умирающими. Они вместе работают над вопросами: что такое жизнь с научной точки зрения? Где та грань, которую нельзя переступать? Это место, где ценность жизни и достоинство смерти уважаются в равной мере.
+
+*   **Кельи Пророческих Сновидений («Залы Блуждания Разума»):** 54 кельи используются для направленных медитаций и астральных путешествий с целью:
+    *   Нахождения утраченных знаний в астрале.
+    *   «Консультаций» с **ушедшими великими умами** (что является крайне рискованной и редко permitted формой некромантии, допустимой лишь в случае крайней научной необходимости и с соблюдением всех мер предосторожности).
+    *   Изучения природы снов и самого Тонущего мира как единого сознания.
+
+#### **Философия и отношение к Некромантии/Некромагии**
+
+*   **Некромагия** (создание нежити, осквернение тел для создания слуг) — **табу**. Это прямое оскорбление и Вейдера (искажение магии и природы), и Тота (извращение естественного порядка), и особенно Ардиса (осквернение владений смерти).
+*   **Некромантия** (как путь познания смерти, общение с духами, изучение процесса умирания) — признается как **опасная, но легитимная область знания**. К ней относятся с величайшей осторожностью и строжайшими этическими рамками. «Беспокоить ушедших можно лишь тогда, когда молчание мертвых грозит гибелью живым». Любой подобный ритуал — это сложный моральный выбор, а не стандартная практика.
+
+#### **Роль в сюжете и игре**
+
+*   **Мудрые наставники и сложные работодатели:** Бахари будут давать квесты не только на добычу книг, но и на **поиск живых образцов** вымирающих видов, **исследование аномалий** и **этичное разрешение конфликтов**, связанных с призраками или проклятиями.
+*   **Источник моральных дилемм:** Игроки могут столкнуться с просьбой помочь в рискованном ритуале общения с умершим гением, чтобы спасти город, или обнаружить, что один из бахари перешел грань дозволенного в своих экспериментах «во имя науки».
+*   **Нейтральная территория напряженного сотрудничества:** Храм — место хрупкого союза между холодным разумом Вейдера-Тота и принимающей смерть духовностью Ардиса. Игроки могут стать посредниками в спорах между двумя культами или свидетелями того, как этот союз дает удивительные результаты.
+
+
+
+### храм Тота  
 **Тип:** Орден  
 
-## Описание
-Вера и наука
+#### Описание  
+Орден, объединяющий духовные практики с научным познанием мира. Последователи чтят Тота — бога мудрости, письменности и магии — и стремятся к синтезу веры и рационального знания. Их девиз: «Истина рождается на стыке тайны и доказательства».  
 
-## Особенности
+#### Деятельность и особенности  
+1. **Крупнейшая библиотека в провинции**  
+   Архивы храма содержат свитки от древних трактатов по алхимии до современных исследований по астральной физике. Доступ открыт для всех искателей знаний.  
 
+2. **Всеобщее образование**  
+   Бесплатная начальная и средняя школа, где дети изучают математику, историю, основы магии и этики. Упор на критическое мышление и междисциплинарный подход.  
+
+3. **Медицинский комплекс «Крылья Ардиса»**  
+   Совместный проект с храмом богини жизни Ардиса. Больница сочетает хирургию, целебную магию и уникальные технологии (включая кристальные микроскопы и регенерационные капсулы). Принимает до 500 пациентов.  
+
+4. **Пророческие камеры**  
+   54 изолированных кельи для ритуалов провидческих снов. Паломники проходят очищение и погружаются в сон под наблюдением жрецов-онейромантов для получения предсказаний или ответов на вопросы.  
+
+#### Инфраструктура  
+Храм построен в форме гигантского пера: центральная башня-«очин» окружена «бородками» — галереями лабораторий, обсерваторией и жилыми кельями. Во дворе растут Сильфийные сады с растениями для исследований и медитаций.  
+
+**Символ:** Открытый свиток, обвитый лотосом (единение науки и духовности).
 
 
 
