--- a/Тонущий_мир.md
+++ b/Тонущий_мир.md
@@ -34,7 +34,7 @@ fmtpIntegration: false
 ```
 
 ## Сводка проекта
-- [ ] #важно Храмы!
+- [x] #важно Храмы! ✅ 2025-09-19
 
 <div class="button-row">
 
