--- a/Справочник/Религии/Путь_Света/Боги/Ардис.md
+++ b/Справочник/Религии/Путь_Света/Боги/Ардис.md
@@ -21,7 +21,7 @@ image: ""
 
 # Ардис
 
-![[image.png]]
+![[Мои Проекты/Тонущий_мир/Справочник/Религии/Путь_Света/Боги/image.png]]
 
 [[Мои Проекты/Тонущий_мир/Справочник/Справочник|Справочник]] / [[Мои Проекты/Тонущий_мир/Справочник/Религии/Путь_Света/Путь_Света|Путь_Света]] / [[Мои Проекты/Тонущий_мир/Справочник/Религии/Путь_Света/Боги/ Боги|Боги]]
 
