--- a/1_Рукопись/Главы/Главы.md
+++ b/1_Рукопись/Главы/Главы.md
@@ -4,28 +4,9 @@
 
 ## Содержимое
 
-```folder-overview
-folderPath: "Мои Проекты/Тонущий_мир/Главы"
-title: "Главы"
-showTitle: false
-depth: 1
-includeTypes:
-  - folder
-  - markdown
-style: list
-disableFileTag: false
-sortBy: name
-sortByAsc: true
-showEmptyFolders: false
-onlyIncludeSubfolders: false
-storeFolderCondition: true
-showFolderNotes: true
-disableCollapseIcon: true
-alwaysCollapse: false
-autoSync: true
-allowDragAndDrop: true
-hideLinkList: true
-hideFolderOverview: false
-useActualLinks: false
-fmtpIntegration: false
+```dataview
+LIST
+FROM "Мои Проекты/Тонущий_мир/1_Рукопись/Главы"
+WHERE file.name != this.file.name
+SORT file.name ASC
 ```
